--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,24 @@
 html {
   box-sizing: border-box;
-  font-size: 100%;
+  font-size: calc(100vw / 1280 * 10);
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+@media (max-width: 1920px) {
+  html {
+    font-size: calc(100vw / 1920 * 10);
+  }
+}
+@media (max-width: 1280px) {
+  html {
+    font-size: calc(100vw / 1280 * 10);
+  }
+}
+@media (max-width: 500px) {
+  html {
+    font-size: calc(100vw / 375 * 10);
+  }
 }
 
 *,
@@ -105,4 +120,7 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 
   -webkit-text-fill-color: #fff;
+}
+p {
+  font-size: 1rem;
 }
